k8s/k8s-11-resource-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resource-server
  name: resource-server
  namespace: my-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-server
  strategy: {}
  template:
    metadata:
      labels:
        app: resource-server
      # annotations:
      #   co.elastic.logs/enabled: "true"
      #   co.elastic.logs.json-logging/json.keys_under_root: "true"
      #   co.elastic.logs.json-logging/json.add_error_key: "true"
      #   co.elastic.logs.json-logging/json.message_key: "message"
    spec:
      containers:
      - image: forsrc/my-sso:resource-server
        name: resource-server
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent #Always
        resources: {}
        livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
---

apiVersion: v1
kind: Service
metadata:
  name: resource-server
  namespace: my-sso
spec:
  selector:
    app: resource-server
  ports:
  - port: 80
    targetPort: 80
    name: resource-server
  type: ClusterIP
