k8s/k8s-02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sso
  namespace: my-sso
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "MY_SSO_SESSION"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - oauth2-server.forsrc.com
    - resource-server.forsrc.com
    - client-server.forsrc.com
    secretName: my-sso.forsrc.com
  rules:
  - host: oauth2-server.forsrc.com
    http:
      paths:
      - path: /
        pathType: Prefix #"Exact", "Prefix", or "ImplementationSpecific"
        backend:
          service:
            name: oauth2-server
            port:
              number: 8080
  - host: resource-server.forsrc.com
    http:
      paths:
      - path: /
        pathType: Prefix #"Exact", "Prefix", or "ImplementationSpecific"
        backend:
          service:
            name: resource-server
            port:
              number: 8080
  - host: client-server.forsrc.com
    http:
      paths:
      - path: /
        pathType: Prefix #"Exact", "Prefix", or "ImplementationSpecific"
        backend:
          service:
            name: client-server
            port:
              number: 8080
